Concept set API

--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -57,6 +57,13 @@ parameters:
     type: integer
     format: int64
     required: true
+  conceptSetId:
+    in: path
+    name: conceptSetId
+    type: integer
+    format: int64
+    required: true
+    description: Concept set ID
 
 paths:
 
@@ -872,6 +879,106 @@ paths:
           schema:
             $ref: '#/definitions/EmptyResponse'
 
+# Concept sets ##############################################################################
+
+  /v1/workspaces/{workspaceNamespace}/{workspaceId}/concept-sets:
+    parameters:
+      - $ref: '#/parameters/workspaceNamespace'
+      - $ref: '#/parameters/workspaceId'
+    get:
+      tags:
+        - conceptSets
+      description: Returns all concept sets in a workspace
+      operationId: "getConceptSetsInWorkspace"
+      responses:
+        200:
+          description: A list of concept sets.
+          schema:
+            $ref: "#/definitions/ConceptSetListResponse"
+    post:
+      tags:
+        - conceptSets
+      description: Creates a concept set in a workspace.
+      operationId: "createConceptSet"
+      parameters:
+        - in: body
+          name: conceptSet
+          description: concept set definition
+          schema:
+            $ref: "#/definitions/ConceptSet"
+      responses:
+        200:
+          description: The concept set that was created.
+          schema:
+            $ref: "#/definitions/ConceptSet"
+
+  /v1/workspaces/{workspaceNamespace}/{workspaceId}/concept-sets/{conceptSetId}:
+    parameters:
+      - $ref: '#/parameters/workspaceNamespace'
+      - $ref: '#/parameters/workspaceId'
+      - $ref: '#/parameters/conceptSetId'
+    get:
+      tags:
+        - conceptSets
+      description: Returns the concept set definition with the specified ID
+      operationId: "getConceptSet"
+      responses:
+        200:
+          description: A concept set definition
+          schema:
+            $ref: "#/definitions/ConceptSet"
+    patch:
+      tags:
+        - conceptSets
+      description: >
+        Modifies the name or description of the concept set with the specified ID;
+        fields that are omitted will not be modified
+      operationId: "updateConceptSet"
+      parameters:
+        - in: body
+          name: conceptSet
+          description: concept set definition
+          schema:
+            $ref: "#/definitions/ConceptSet"
+      responses:
+        200:
+          description: The updated concept set.
+          schema:
+            $ref: "#/definitions/ConceptSet"
+    delete:
+      tags:
+        - conceptSets
+      description: Deletes the concept set with the specified ID
+      operationId: "deleteConceptSet"
+      responses:
+        202:
+          description: ACCEPTED
+          schema:
+            $ref: '#/definitions/EmptyResponse'
+
+  /v1/workspaces/{workspaceNamespace}/{workspaceId}/concept-sets/{conceptSetId}/concepts:
+    parameters:
+      - $ref: '#/parameters/workspaceNamespace'
+      - $ref: '#/parameters/workspaceId'
+      - $ref: '#/parameters/conceptSetId'
+    post:
+      tags:
+        - conceptSets
+      description: >
+        Adds or removes concepts from the concept set.
+      operationId: "updateConceptSetConcepts"
+      parameters:
+        - in: body
+          name: request
+          description: update concept set request
+          schema:
+            $ref: "#/definitions/UpdateConceptSetRequest"
+      responses:
+        200:
+          description: The updated concept set.
+          schema:
+            $ref: "#/definitions/ConceptSet"
+
 ##########################################################################################
 ## DEFINITIONS
 ##########################################################################################
@@ -970,6 +1077,21 @@ definitions:
         REVIEW_RESEARCH_PURPOSE,
         MANAGE_GROUP,
         REVIEW_ID_VERIFICATION
+    ]
+
+  ConceptSetDomain:
+    type: string
+    description: >
+      Domains for concept sets; corresponds to tables in OMOP with person_id columns.
+    enum: [
+        CONDITION,
+        DEATH,
+        DEVICE,
+        DRUG,
+        MEASUREMENT,
+        OBSERVATION,
+        PROCEDURE,
+        VISIT
     ]
 
   PageVisit:
@@ -1298,6 +1420,80 @@ definitions:
         type: integer
         format: int64
         description: Milliseconds since the UNIX epoch.
+
+  ConceptSetListResponse:
+    type: object
+    required:
+      - items
+    properties:
+      items:
+        type: "array"
+        items:
+           $ref: "#/definitions/ConceptSet"
+
+  ConceptSet:
+    type: object
+    required:
+      - name
+      - type
+    properties:
+      id:
+        type: integer
+        format: int64
+      etag:
+        type: string
+        description: >
+          Entity tag for optimistic concurrency control. To be set during a
+          read-modify-write to ensure that the client has not attempted to
+          modify a changed resource.
+      name:
+        type: string
+      domain:
+        $ref: "#/definitions/ConceptSetDomain"
+      description:
+        type: string
+      creator:
+        type: string
+      creationTime:
+        type: integer
+        format: int64
+        description: Milliseconds since the UNIX epoch.
+      lastModifiedTime:
+        type: integer
+        format: int64
+        description: Milliseconds since the UNIX epoch.
+      concepts:
+        description: "Concepts in the concept set, in alphabetical order."
+        type: array
+        items:
+          $ref: "#/definitions/Concept"
+
+  UpdateConceptSetRequest:
+    type: object
+    required:
+      - etag
+    properties:
+      etag:
+        type: string
+        description: >
+          Etag of the concept set being modified.
+          Validates that the workspace (and its user roles) has not been modified since this
+          etag was retrieved.
+      addedIds:
+        type: array
+        description: >
+          The IDs of concepts to be added to the concept set.
+        items:
+          type: integer
+          format: int64
+      removedIds:
+        type: array
+        description: >
+          The IDs of concepts to be removed from the concept set.
+        items:
+          type: integer
+          format: int64
+
 
   CreateAccountRequest:
     type: object
