--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -87,6 +87,51 @@ paths:
           schema:
             $ref: "#/definitions/AchillesResult"
 
+  /v1/databrowser/gender-count:
+    get:
+      security: []
+      tags:
+        - dataBrowser
+
+      description: Gets results for an analysis id
+      operationId: "getGenderAnalysis"
+      parameters: []
+      responses:
+        200:
+          description: Gender analysis along with results
+          schema:
+            $ref: "#/definitions/Analysis"
+
+  /v1/databrowser/race-count:
+    get:
+      security: []
+      tags:
+        - dataBrowser
+
+      description: Gets results for an analysis id
+      operationId: "getRaceAnalysis"
+      parameters: []
+      responses:
+        200:
+          description: Race analysis along with results
+          schema:
+            $ref: "#/definitions/Analysis"
+
+  /v1/databrowser/ethnicity-count:
+    get:
+      security: []
+      tags:
+        - dataBrowser
+
+      description: Gets results for an analysis id
+      operationId: "getEthnicityAnalysis"
+      parameters: []
+      responses:
+        200:
+          description: Ethnicity analysis along with results
+          schema:
+            $ref: "#/definitions/Analysis"
+
   /v1/databrowser/domain-search:
     get:
       security: []
@@ -167,6 +212,7 @@ paths:
           description: A collection of domain filters
           schema:
             $ref: "#/definitions/DbDomainListResponse"
+
 
   /v1/databrowser/survey-list:
     get:
@@ -283,7 +329,11 @@ definitions:
         description: prevalence among participants percent count divided num participants
         type: number
         format: float
-
+      conceptSynonyms:
+        description: concept synonym names
+        type: "array"
+        items:
+          type: "string"
 
   ConceptListResponse:
       type: object
@@ -409,6 +459,75 @@ definitions:
           $ref: "#/definitions/AchillesResult"
 
 
+  AchillesResultDist:
+    type: object
+    required:
+      - analysisId
+
+    properties:
+      id:
+        description: pk id for jpa code to work
+        type: integer
+        format: int64
+      analysisId:
+        description: id analysis
+        type: integer
+        format: int64
+      stratum1:
+        description: stratum 1
+        type: string
+      stratum2:
+        description: stratum 2
+        type: string
+      stratum3:
+        description: stratum 3
+        type: string
+      stratum4:
+        description: stratum 4
+        type: string
+      stratum5:
+        description: stratum 5
+        type: string
+      countValue:
+        description: count
+        type: integer
+        format: int64
+      minValue:
+        description: min value
+        type: number
+        format: float
+      maxValue:
+        description: max value
+        type: number
+        format: float
+      avgValue:
+        description: avg value
+        type: number
+        format: float
+      stdevValue:
+        description: std deviation value
+        type: number
+        format: float
+      medianValue:
+        description: median value
+        type: number
+        format: float
+      p10Value:
+        description: 10th percentile  value
+        type: number
+        format: float
+      p25Value:
+        description: 25th percentile value
+        type: number
+        format: float
+      p75Value:
+        description: 75th percentile value
+        type: number
+        format: float
+      p90Value:
+        description: 90th percentile value
+        type: number
+        format: float
 
   Analysis:
     type: object
@@ -448,6 +567,11 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/AchillesResult"
+      distResults:
+        description: distribution results
+        type: array
+        items:
+          $ref: "#/definitions/AchillesResultDist"
 
   AnalysisListResponse:
     type: object
@@ -516,6 +640,38 @@ definitions:
         $ref: "#/definitions/Analysis"
       ageAnalysis:
         description: age analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+      raceAnalysis:
+        description: race analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+      ethnicityAnalysis:
+        description: ethnicity analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueGenderAnalysis:
+        description: measurement value gender analysis
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueMaleAnalysis:
+        description: male analysis for measurement values
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueFemaleAnalysis:
+        description: female analysis for measurement values
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueOtherGenderAnalysis:
+        description: other  analysis for measurement values
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementValueAgeAnalysis:
+        description: age analysis for measurement values
+        type: object
+        $ref: "#/definitions/Analysis"
+      measurementDistributionAnalysis:
+        description: measurement distribution analysis
         type: object
         $ref: "#/definitions/Analysis"
 
