Compile integration tests in Circle

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,6 +31,11 @@ jobs:
           working_directory: ~/workbench/api
           command: ./project.rb validate-swagger --project-prop verboseTestLogging=yes
       - run:
+          name: Integration tests compile
+          working_directory: ~/workbench/api
+          command: ./project.rb gradle compileBigQuery compileIntegration
+      - run:
+          name: Unit tests
           working_directory: ~/workbench/api
           command: ./project.rb test
       - save_cache:
