--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -1453,7 +1453,7 @@ definitions:
         format: int64
         description: Milliseconds since the UNIX epoch.
       concepts:
-        description: "Concepts in the concept set, in alphabetical order."
+        description: "Concepts in the concept set, in conceptName order."
         type: array
         items:
           $ref: "#/definitions/Concept"
@@ -1467,7 +1467,7 @@ definitions:
         type: string
         description: >
           Etag of the concept set being modified.
-          Validates that the concept set (and its user roles) has not been modified since this
+          Validates that the concept set has not been modified since this
           etag was retrieved.
       addedIds:
         type: array
