[RW-857][Risk=no] Notebook Actions (#1111)
* first try

* forgot some files and some delinting

* more de-linting

* forgot to take some things out, trying to fix tests

* forgot to alphabetize

* trying something

* couple tweaks

* adding name collision handling

* de-linting

* add api tests

* PR comments

* tweak

* adding ui tests

* de-linting

* more de-linting

* PR comments

* forgot to update this spec

* de-linting

* PR comments

* more PR comments

--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -795,6 +795,76 @@ paths:
           schema:
             $ref: "#/definitions/CloneWorkspaceResponse"
 
+  # Notebooks ############################################################################
+
+  /v1/workspaces/{workspaceNamespace}/{workspaceId}/notebooks/rename:
+    parameters:
+      - $ref: '#/parameters/workspaceNamespace'
+      - $ref: '#/parameters/workspaceId'
+    post:
+      tags:
+        - workspaces
+      description: Renames specified notebook
+      operationId: "renameNotebook"
+      parameters:
+        - in: body
+          name: NotebookRename
+          description: new name for notebook
+          required: true
+          schema:
+            type: object
+            properties:
+              name:
+                type: string
+              newName:
+                type: string
+      responses:
+        200:
+          description: Successful rename
+          schema:
+            $ref: "#/definitions/FileDetail"
+
+
+  /v1/workspaces/{workspaceNamespace}/{workspaceId}/notebooks/{notebookName}/clone:
+    parameters:
+      - $ref: '#/parameters/workspaceNamespace'
+      - $ref: '#/parameters/workspaceId'
+    post:
+      tags:
+        - workspaces
+      description: Clones specified notebook
+      operationId: "cloneNotebook"
+      parameters:
+        - in: path
+          name: notebookName
+          required: true
+          type: string
+      responses:
+        200:
+          description: Successful clone
+          schema:
+            $ref: "#/definitions/FileDetail"
+
+  /v1/workspaces/{workspaceNamespace}/{workspaceId}/notebooks/{notebookName}/delete:
+    parameters:
+      - $ref: '#/parameters/workspaceNamespace'
+      - $ref: '#/parameters/workspaceId'
+    delete:
+      tags:
+        - workspaces
+      description: Deletes specified notebook
+      operationId: "deleteNotebook"
+      parameters:
+        - in: path
+          name: notebookName
+          required: true
+          type: string
+      responses:
+        200:
+          description: Successful delete
+          schema:
+            $ref: "#/definitions/EmptyResponse"
+
   # Cohorts ##############################################################################
 
   /v1/workspaces/{workspaceNamespace}/{workspaceId}/cohorts:
