refactor in progerss cleanup constants

--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -687,7 +687,7 @@ definitions:
   MatchType:
     type: string
     description: match column type on concept search
-    enum: [CONCEPT_CODE, CONCEPT_ID, CONCEPT_NAME, CONCEPT_SYNONYM]
+    enum: [CONCEPT_CODE, CONCEPT_ID, CONCEPT_NAME]
 
   SearchConceptsRequest:
     type: object
