--- a/api/src/main/resources/cb_review_api.yaml
+++ b/api/src/main/resources/cb_review_api.yaml
@@ -174,6 +174,11 @@ paths:
           type: string
           required: true
           description: specifies which domain the chart data should belong to.
+        - in: query
+          name: limit
+          type: integer
+          required: false
+          description: the limit search results to
       responses:
         200:
           description: The Participant Chart data
