--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -65,6 +65,63 @@ paths:
           schema:
             $ref: "#/definitions/CriteriaListResponse"
 
+  /v1/cohortbuilder/{cdrVersionId}/criteria/{type}/children/{id}:
+    parameters:
+      - $ref: '#/parameters/cdrVersionId'
+    get:
+      tags:
+        - cohortBuilder
+      description: Returns builder criteria tree with the specified criteria type and parentId
+      operationId: "getCriteriaChildrenByTypeAndParentId"
+      parameters:
+        - in: path
+          name: type
+          type: string
+          required: true
+          description: the specific type of criteria to get
+        - in: path
+          name: parentId
+          type: integer
+          format: int64
+          required: true
+          description: fetch children of parentId
+      responses:
+        200:
+          description: A collection of criteria
+          schema:
+            $ref: "#/definitions/CriteriaListResponse"
+
+  /v1/cohortbuilder/{cdrVersionId}/criteria/{type}/{subtype}/{parentId}:
+    parameters:
+      - $ref: '#/parameters/cdrVersionId'
+    get:
+      tags:
+        - cohortBuilder
+      description: Returns builder criteria tree with the specified criteria type and parentId
+      operationId: "getCriteriaByTypeAndSubtypeAndParentId"
+      parameters:
+        - in: path
+          name: type
+          type: string
+          required: true
+          description: the specific type of criteria to get
+        - in: path
+          name: subtype
+          type: string
+          required: true
+          description: the specific subtype of criteria to get
+        - in: path
+          name: parentId
+          type: integer
+          format: int64
+          required: true
+          description: fetch children of parentId
+      responses:
+        200:
+          description: A collection of criteria
+          schema:
+            $ref: "#/definitions/CriteriaListResponse"
+
   /v1/cohortbuilder/{cdrVersionId}/criteria/{type}:
     parameters:
       - $ref: '#/parameters/cdrVersionId'
@@ -104,27 +161,6 @@ paths:
           type: string
           required: true
           description: the value to search for
-      responses:
-        200:
-          description: A collection of criteria
-          schema:
-            $ref: "#/definitions/CriteriaListResponse"
-
-  /v1/cohortbuilder/{cdrVersionId}/criteria/subtree/{id}:
-    parameters:
-      - $ref: '#/parameters/cdrVersionId'
-    get:
-      tags:
-        - cohortBuilder
-      description: Returns subtree for the specified id.
-      operationId: "getCriteriaById"
-      parameters:
-        - in: path
-          name: id
-          type: integer
-          format: int64
-          required: true
-          description: the id of the subtree to find
       responses:
         200:
           description: A collection of criteria
