Api fix and concept_synonym index addition

--- a/public-api/src/main/resources/public-api.yaml
+++ b/public-api/src/main/resources/public-api.yaml
@@ -572,6 +572,9 @@ definitions:
         type: array
         items:
           $ref: "#/definitions/AchillesResultDist"
+      unitName:
+        description: measurement unit
+        type: string
 
   AnalysisListResponse:
     type: object
