adding workspace id

--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -1945,6 +1945,9 @@ definitions:
   RecentResource:
     type: object
     properties:
+      workspaceId:
+        type: integer
+        format: int64
       permission:
         type: string
       cohort:
