RW-1201 gray out parents of selected children

--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -65,7 +65,7 @@ paths:
           schema:
             $ref: "#/definitions/CriteriaListResponse"
 
-  /v1/cohortbuilder/{cdrVersionId}/criteria/{type}/children/{id}:
+  /v1/cohortbuilder/{cdrVersionId}/criteria/{type}/children/{parentId}:
     parameters:
       - $ref: '#/parameters/cdrVersionId'
     get:
