--- a/api/src/main/resources/workbench.yaml
+++ b/api/src/main/resources/workbench.yaml
@@ -961,7 +961,7 @@ paths:
           schema:
             $ref: "#/definitions/RecentResourceResponse"
 
-  /v1/notebook/recentResource/{workspaceId}/{workspaceName}/{notebook}/delete-notebook:
+  /v1/recentResource/{workspaceId}/{workspaceName}/{notebook}/delete-notebook:
     parameters:
       - $ref: '#/parameters/workspaceNamespace'
       - $ref: '#/parameters/workspaceId'
@@ -981,7 +981,7 @@ paths:
           schema:
             $ref: "#/definitions/EmptyResponse"
 
-  /v1/notebook/recentResource/{workspaceId}/{workspaceName}/rename-notebook:
+  /v1/recentResource/{workspaceId}/{workspaceName}/rename-notebook:
     parameters:
       - $ref: '#/parameters/workspaceNamespace'
       - $ref: '#/parameters/workspaceId'
