RW-1241 changed Heart Rhythm, Preg and Wheelchair queries.

--- a/api/src/bigquerytest/resources/bigquery/cbdata/measurement_data.json
+++ b/api/src/bigquerytest/resources/bigquery/cbdata/measurement_data.json
@@ -68,7 +68,7 @@
     "measurement_type_concept_id":9,
     "operator_concept_id":9,
     "value_as_number":1.0,
-    "value_as_concept_id":9,
+    "value_as_concept_id":4262985,
     "unit_concept_id":9,
     "range_low":1.0,
     "range_high":10.0,
@@ -148,7 +148,7 @@
     "measurement_type_concept_id":9,
     "operator_concept_id":9,
     "value_as_number":1.0,
-    "value_as_concept_id":9,
+    "value_as_concept_id":4297303,
     "unit_concept_id":9,
     "range_low":1.0,
     "range_high":10.0,
@@ -268,7 +268,7 @@
     "measurement_type_concept_id":9,
     "operator_concept_id":9,
     "value_as_number":20,
-    "value_as_concept_id":9,
+    "value_as_concept_id":45877994,
     "unit_concept_id":9,
     "range_low":1.0,
     "range_high":10.0,
@@ -308,7 +308,7 @@
     "measurement_type_concept_id":9,
     "operator_concept_id":9,
     "value_as_number":20,
-    "value_as_concept_id":9,
+    "value_as_concept_id":4023190,
     "unit_concept_id":9,
     "range_low":1.0,
     "range_high":10.0,
