--- a/api/src/main/resources/cb_search_api.yaml
+++ b/api/src/main/resources/cb_search_api.yaml
@@ -658,6 +658,11 @@ definitions:
     description: possible types of modifiers
     enum: [AGE_AT_EVENT, NUM_OF_OCCURRENCES, EVENT_DATE, ENCOUNTERS]
 
+  TreeType:
+    type: string
+    description: possible types of trees
+    enum: [ICD9, ICD10, CPT, DEMO, VISIT, PM, DRUG, MEAS, CONDITION, PROCEDURE, SURVEY]
+
   ChartInfoListResponse:
     type: object
     required:
