--- a/api/src/main/resources/client_api.yaml
+++ b/api/src/main/resources/client_api.yaml
@@ -408,6 +408,27 @@ definitions:
         items:
           type: "string"
 
+  ConceptSynonym:
+    type: object
+    description: concept synonym
+    required:
+      - conceptId
+      - conceptSynonymName
+      - languageConceptId
+
+    properties:
+      conceptId:
+        description: concept id
+        type: integer
+        format: int64
+      conceptSynonymName:
+        description: concept synonym name
+        type: string
+      languageConceptId:
+        description: language concept id
+        type: integer
+        format: int64
+
   SearchConceptsRequest:
     type: object
     required:
