--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,8 +24,7 @@ jobs:
           command: git submodule update --init --recursive
       - run:
         command: |
-          # The following bash will not actually work
-          if (( ! ../ci/has_branch_changes "${CIRCLE_BRANCH}" "/api/" "/common-api/" )); then
+          if [git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) | grep api/ | wc -l] && ${CIRCLE_BRANCH != "master"}; then
             echo No relevant changes on non-master branch, skipping
             circleci step halt
           fi
