--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -24,7 +24,8 @@ jobs:
           command: git submodule update --init --recursive
       - run:
           command: |
-            if [ $(git diff --name-only $(git merge-base master ch/ci-strawman) | grep api/ | wc -l | xargs) == 0 ] && [ ch/ci-strawman != "master" ]; then
+            if [ $(git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) | grep api/ | wc -l | xargs) == 0 ] && [ ${CIRCLE_BRANCH} != "master" ]; then
+              echo ${CIRCLE_BRANCH}
               echo $(git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) | grep api/ | wc -l)
               echo No relevant changes on non-master branch, skipping
               circleci step halt
