--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -26,6 +26,10 @@ jobs:
           command: |
             if [ $(git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) | grep api/ | wc -l | xargs) == 0 ] && [ ${CIRCLE_BRANCH} != "master" ]; then
               echo ${CIRCLE_BRANCH}
+              git merge-base master ${CIRCLE_BRANCH}
+              git diff --name-only $(git merge-base master ${CIRCLE_BRANCH})
+              git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) | grep api/
+              git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) | grep api/ | wc -l
               echo $(git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) | grep api/ | wc -l)
               echo No relevant changes on non-master branch, skipping
               circleci step halt
