--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -27,17 +27,18 @@ jobs:
             if [ $(git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) | grep api/ | wc -l | xargs) == 0 ] && [ ${CIRCLE_BRANCH} != "master" ]; then
               echo ${CIRCLE_BRANCH}
               echo "*"
+              git merge-base origin/master ${CIRCLE_BRANCH}
               git merge-base master ${CIRCLE_BRANCH}
               echo "*"
-              echo git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH}
-              git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH}
+              echo git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH}
+              git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH}
               echo "*"
-              echo git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/
-              git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/
+              echo git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/
+              git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/
               echo "*"
-              git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/ | wc -l
+              git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/ | wc -l
               echo "*"
-              echo $(git diff --name-only $(git merge-base master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/ | wc -l)
+              echo $(git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/ | wc -l)
               echo "*"
               echo No relevant changes on non-master branch, skipping
               circleci step halt
