--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -23,23 +23,9 @@ jobs:
       - run:
           command: git submodule update --init --recursive
       - run:
+        #Circle is bad about setting up your remotes for you, you must use origin/
           command: |
             if [ $(git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) | grep api/ | wc -l | xargs) == 0 ] && [ ${CIRCLE_BRANCH} != "master" ]; then
-              echo ${CIRCLE_BRANCH}
-              echo "*"
-              git merge-base origin/master ${CIRCLE_BRANCH}
-              git merge-base master ${CIRCLE_BRANCH}
-              echo "*"
-              echo git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH}
-              git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH}
-              echo "*"
-              echo git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/
-              git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/
-              echo "*"
-              git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/ | wc -l
-              echo "*"
-              echo $(git diff --name-only $(git merge-base origin/master ${CIRCLE_BRANCH}) ${CIRCLE_BRANCH} | grep api/ | wc -l)
-              echo "*"
               echo No relevant changes on non-master branch, skipping
               circleci step halt
             fi
